Fix blue font color on mobile phones

--- a/css/general.css
+++ b/css/general.css
@@ -26,6 +26,7 @@ h2{
 button{
     border-width: 0px;
     background-color: transparent;
+    color: inherit;
     font: inherit;
     font-size: clamp(18px, 1vw + 12px, 24px);
     padding: 0;
